Fix mobile alignment for tags

--- a/_scss/partials/_other-projects.scss
+++ b/_scss/partials/_other-projects.scss
@@ -40,6 +40,9 @@
       }
       margin-left: 15px;
       margin-bottom: 20px;
+      @include mobile {
+        margin-left: 0px;
+      }
     }
     &__pic {
       max-width: 700px;
